fix highscore buttons alignment on phones

--- a/src/app/difficulty/difficulty.component.scss
+++ b/src/app/difficulty/difficulty.component.scss
@@ -5,8 +5,14 @@
 h1 {
     text-align: center;
     padding-bottom: 2%;
-    font-weight: 200;
+    font-weight: 400;
     font-size: calc(1.3vw + 1.3vh + .5vmin);
+}
+
+#button-container {
+    display: flex;
+    flex-direction: column;
+    border: 2px bold red;
 }
 
 button {
